--- a/form.html
+++ b/form.html
@@ -9,8 +9,8 @@
     
 <div>
      Выберите язык: 
-  <a href="http://nnn.ua/imt/index.php">Русский</a>
-  <a href="http://nnn.ua/imt/eng.php">Английский</a>
+  <a href="./index.php">Русский</a>
+  <a href="./eng.php">Английский</a>
 </div>
  
     
