--- a/form_eng.html
+++ b/form_eng.html
@@ -9,8 +9,8 @@
     
 <div>
    Choose your language:
-  <a href="http://nnn.ua/imt/index.php">Russian</a>
-  <a href="http://nnn.ua/imt/eng.php">English</a>
+  <a href="./index.php">Russian</a>
+  <a href="./eng.php">English</a>
 </div>
     
 <form method="post" action=""> 
