--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
 <form method="post" action=""> 
 <h2>Вес:</h2> <input type="text" name="v">
 <h2>Рост:</h2> <input type="text" name="r">
-<input type="submit" name="submit" value="Расчитать"> 
+<input type="submit" name="submit" value="Рассчитать"> 
 </form> 
 </body>
 </html>
